# pact-reference

rust/: Cargo.toml
rust/pact_matching/src/: lib.rs  path_exp.rs
rust/pact_matching/src/models/: generators.rs  matchingrules.rs  message.rs  mod.rs
rust/pact_matching/src/models/v4/: http_parts.rs  mod.rs
rust/pact_matching_ffi/: ARCHITECTURE.md  CMakeLists.txt  README.md
rust/pact_matching_ffi/cmake/: FindCargo.cmake  FindCbindgen.cmake  PactMatchingFFIConfig.cmake.in  PactMatchingFfiConfig.cmake.in
rust/pact_matching_ffi/conan/lib/: conanfile.py
rust/pact_matching_ffi/conan/lib/test_package/: CMakeLists.txt  conanfile.py  example.cpp
rust/pact_matching_ffi/conan/lib/test_package/src/: logger_tests.cpp  main.c  message_tests.cpp
rust/pact_matching_ffi/example/: CMakeLists.txt
rust/pact_matching_ffi/examples/error_handling/src/: main.c
rust/pact_matching_ffi/examples/logging/src/: main.c
rust/pact_matching_ffi/src/: lib.rs
rust/pact_matching_ffi/src/log/: ffi.rs  level_filter.rs  logger.rs  mod.rs  sink.rs  status.rs
rust/pact_matching_ffi/src/models/: consumer.rs  matching_rules.rs  message.rs  message_pact.rs  metadata.rs  mod.rs  provider.rs  provider_state.rs
rust/pact_matching_ffi/src/util/: ffi.rs  string.rs
rust/pact_mock_server_ffi/: Cargo.toml
rust/pact_mock_server_ffi/src/: bodies.rs
